# pet_project_testing_for_data_engineer

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: airflow.cfg
dags/: bad_users_to_pg.py
dags/extensions_for_orchestration/: extensions_api.py  extensions_dict.py  extensions_postgresql.py  extensions_str.py  extensions_transform.py
dags/orchestration/: bad_etl_pattern_for_testing_users_to_pg.py  good_etl_pattern_for_testing_users_to_pg.py
handles/airflow/: main.py
handles/dwh/: main.py
handles/oltp/: execute_custom_query.py
main/: simple_function.py  typed_simple_function.py
tests/: test_simple_function.py  test_typed_simple_function.py
tests/dags/airflow/: test_postgres_connection.py
tests/dags/extensions_for_orchestration/: test_extensions_api.py  test_extensions_dict.py  test_extensions_postgresql.py  test_extensions_str.py  test_extensions_transform.py
tests/dags/orchestration/: test_bad_etl_pattern_for_testing_users_to_pg.py  test_good_etl_pattern_for_testing_users_to_pg.py
